--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Projects</title>
+    <style>
+        body {
+            background-color: #2b4162;
+            background-image: linear-gradient(315deg, #2b4162 0%, #12100e 74%);
+            color: white;
+        }
+
+        a:visited {
+            color: rgb(226, 226, 226);
+        }
+    </style>
 </head>
 
 <body>
     <h1>List of projects</h1>
     <ol>
         <li><a href="File_Explorer/index.html">File Explorer</a></li>
+        <li><a href="Nested_Comments/index.html">Nested Comments System</a></li>
     </ol>
 </body>
 
