Added nested reply functionality

--- a/Nested_Comments/index.html
+++ b/Nested_Comments/index.html
@@ -14,7 +14,7 @@
             <input type="text" id="comment-input" placeholder="Add a comment">
             <button id="comment-btn">Comment</button>
         </div>
-        <div class="comments-container">
+        <div id="comments-container">
             <!-- comments will be added here dynamically -->
         </div>
     </div>
