--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
         body {
             background-color: #2b4162;
             background-image: linear-gradient(315deg, #2b4162 0%, #12100e 74%);
+            min-height: 100vh;
             color: white;
+            font-family: Arial, Helvetica, sans-serif;
         }
 
-        a:visited {
+        a:visited,
+        a:link,
+        a:active {
             color: rgb(226, 226, 226);
+        }
+
+        a:hover {
+            color: bisque;
         }
     </style>
 </head>
