--- a/File_Explorer/index.html
+++ b/File_Explorer/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="parentContainer">
         <div>
-            <img src="folder-add.svg" class="addFolder" id="parentFolder" alt="">
-            <img src="file-add.svg" class="addFile" id="parentFile" alt="">
+            <img src="assets/folder-add.svg" class="addFolder" id="parentFolder" alt="">
+            <img src="assets/file-add.svg" class="addFile" id="parentFile" alt="">
         </div>
     </div>
     <script src="index.js"></script>
