Forms, Inline vs block, links

--- a/HTML/5_Inline_Block.html
+++ b/HTML/5_Inline_Block.html
@@ -8,8 +8,12 @@
 </head>
 
 <body>
+    <h1>Inline vs Block elements</h1>
     <em>This is an inline elements. They won't push other contents away</em>
     <p>This is a block element. It takes a whole block.</p>
+    <em>One</em>
+    <em>Two</em>
+    <em>Inline elements sharing space.</em>
 </body>
 
 </html>
