--- a/CSS/Styling_Text/5_Text_Shadows.html
+++ b/CSS/Styling_Text/5_Text_Shadows.html
@@ -12,7 +12,12 @@
         }
 
         .multuipleShadows {
-            text-shadow: -1px 1px 0px red, -2px 1px 0px rgb(60, 24, 190);
+            text-shadow: -0.5px 0.2px 0px red,
+                -0.9px 0.2px 0px rgb(60, 24, 190),
+                -1.8px 0.2px 0px rgb(9, 170, 162),
+                -2.5px 0.2px 0px rgb(16, 223, 95);
+            ;
+            font-size: 30px;
         }
     </style>
 </head>
