--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <body>
     <h1>List of projects</h1>
     <ol>
-        <li><a href="File_Explorer/index.html">File Explorer</a></li>
-        <li><a href="Nested_Comments/index.html">Nested Comments System</a></li>
+        <li><a href="Javascript_Projects/File_Explorer/index.html">File Explorer</a></li>
+        <li><a href="Javascript_Projects/Nested_Comments/index.html">Nested Comments System</a></li>
     </ol>
 </body>
 
