Display none property

--- a/CSS/Box_Model/5_DisplayProperty.html
+++ b/CSS/Box_Model/5_DisplayProperty.html
@@ -71,6 +71,10 @@
         <li>A block that <span id="ibWord">doesnt</span> break into a new line.</li>
         <li>Padding and Margin push other elements away from the box</li>
     </ul>
+
+    <h3>What is display:none ?</h3>
+    <p>It completely removes the element from html.</p>
+    <p>Opacity just hides it, it will still consume space on the UI.</p>
 </body>
 
 </html>
