--- a/CSS/Box_Model/6_NegativeMarginsAndAutoMargin.html
+++ b/CSS/Box_Model/6_NegativeMarginsAndAutoMargin.html
@@ -31,6 +31,7 @@
     <h1>Negative Margin & Margin Auto</h1>
 
     <h3>Margin Auto</h3>
+    <p>This may not always work</p>
     <div id="container">
         <h3>Center Me</h3>
     </div>
